<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#2000ffff"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:id="@+id/game_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/splash"
    app:layout_constraintVertical_bias="0.45"
    app:layout_constraintVertical_chainStyle="packed"
    android:textAlignment="center"
    android:textSize="25sp"
    android:textStyle="bold"
    android:text="@string/json_the_arg_nauts"/>

  <ImageView
    android:id="@+id/splash"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scaleType="centerInside"
    android:adjustViewBounds="true"
    android:src="@drawable/splash"
    app:layout_constraintTop_toBottomOf="@id/game_title"
    app:layout_constraintBottom_toBottomOf="parent"
    android:contentDescription="@string/opening_graphic"/>

  <TextView
    android:id="@+id/board_size_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/board_size"
    app:layout_constraintStart_toStartOf="@id/board_size"
    app:layout_constraintEnd_toEndOf="@id/board_size"
    android:labelFor="@id/board_size"
    android:text="@string/board_size"/>

  <TextView
    android:id="@+id/player_count_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/player_count"
    app:layout_constraintStart_toStartOf="@id/player_count"
    app:layout_constraintEnd_toEndOf="@id/player_count"
    android:labelFor="@id/player_count"
    android:text="@string/number_of_players"/>

  <Spinner
    android:id="@+id/board_size"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/start_game"
    app:layout_constraintTop_toBottomOf="@id/splash"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/player_count"
    app:layout_constraintVertical_chainStyle="packed"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:padding="@dimen/half_dynamic_spacing"/>

  <Spinner
    android:id="@+id/player_count"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="@id/board_size"
    app:layout_constraintBottom_toBottomOf="@id/board_size"
    app:layout_constraintStart_toEndOf="@id/board_size"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:padding="@dimen/half_dynamic_spacing"/>

  <Button
    android:id="@+id/start_game"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/board_size"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:text="@string/start_game"/>


</androidx.constraintlayout.widget.ConstraintLayout>